test/tests/stages/5_local_variables/valid/extra_credit/compound_minus.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(to_subtract)
  =
  const int(10)
  ;
  identifier(to_subtract)
  -=
  const int(8)
  ;
  return
  identifier(to_subtract)
  ;
  }
