test/tests/stages/5_local_variables/invalid_semantics/extra_credit/undeclared_compound_assignment_use.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(b)
  =
  const int(10)
  ;
  identifier(b)
  *=
  identifier(a)
  ;
  return
  const int(0)
  ;
  }
